settings: Add checkbox for the `theme_detection` display setting
With this commit:
- Modify `settings_config.js` and `settings.js` in order to create the
  checkbox for the `theme_detection` setting.
- Modify `settings_checkbox.hbs` and `display_settings.hbs` in order to
  prevent the user from modifying the `night_mode` setting when the
  `theme_detection` setting is enabled.
- Modify `settings_display.js` in order to update the database and the
  UI according to the checkbox change.
- Add appropriate functions in `server_events_dispatch.js` and
  `night_mode.js` to handle the changing state of the checkbox and
  adjust the class of the `body` element accordingly.
- Add the respective frontend test in `dispatch.js`.

Co-authored-by: @MariaGkoulta <43913366+MariaGkoulta@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -379,6 +379,7 @@
                 "subs": false,
                 "tab_bar": false,
                 "templates": false,
+                "theme_detection": false,
                 "tictactoe_widget": false,
                 "timerender": false,
                 "todo_widget": false,
